Convert tab to 2 spaces.

--- a/jdbc/conf/jdbc.conf
+++ b/jdbc/conf/jdbc.conf
@@ -8,17 +8,17 @@ input {
       jdbc_driver_library => "/root/apps/mysql-connector-java-5.1.37-bin.jar"
       jdbc_driver_class => "com.mysql.jdbc.Driver"
       statement_filepath => "/root/code/UGC/jdbc/sql/jdbc.sql"
-	  schedule => "* * * * *"
-	  type => "jdbc"
-	  
-	  codec => plain { charset => "UTF-8"}
-	  use_column_value => true
-	  tracking_column => id
-	  record_last_run => true
-	  last_run_metadata_path => "/root/code/UGC/jdbc/sql/jdbc_record.txt"
-	  jdbc_paging_enabled => true
-	  jdbc_page_size => 300
-	  clean_run => false
+			schedule => "* * * * *"
+			type => "jdbc"
+			
+			codec => plain { charset => "UTF-8"}
+			use_column_value => true
+			tracking_column => id
+			record_last_run => true
+			last_run_metadata_path => "/root/code/UGC/jdbc/sql/jdbc_record.txt"
+			jdbc_paging_enabled => true
+			jdbc_page_size => 300
+			clean_run => false
     }
 }
 
@@ -32,12 +32,14 @@ filter {
 
 
 output {
-    elasticsearch {
-        hosts => ["localhost:9200"]
-        index => "resource"
-        document_id => "%{id}"
-    }
-    stdout {
-        codec => json_lines
-    }
+  elasticsearch {
+    hosts => ["localhost:9200"]
+    index => "resource"
+    document_id => "%{id}"
+		template_overwrite => true
+		template => "/root/code/UGC/jdbc/template/ik.json"
+  }
+  stdout {
+    codec => json_lines
+  }
 }
